# fourier-circles

./: .gitmodules  README.md  meson.build
lib/: meson.build
lib/fcircles/: fourier_transform.hh
lib/fcircles/draw/: canvas.hh  circle.hh  png_image.hh  segment.hh
lib/fcircles/math/: fourier_transform.hh
lib/fcircles/utils/colours/: rgba.hh
lib/fcircles/utils/image/: canvas.hh  png_image.hh
lib/fcircles/utils/math/: fourier_circle.hh
src/: meson.build
src/draw/: canvas.cc  circle.cc  png_image.cc  segment.cc
src/math/: fourier_transform.cc
src/utils/image/: canvas.cc  png_image.cc
subprojects/: .gitignore
